# MyGameEngine3D

./: .env.cmake  .gitattributes  .gitignore  CMakeLists.txt  compile.bat  envUnixExample.cmake  envWindowsExample.cmake  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  mingwBuild.bat  my_camera.cpp  my_game_object.hpp  my_model.cpp  my_pipeline.cpp  my_pipeline.hpp  my_renderer.cpp  my_swap_chain.cpp  my_swap_chain.hpp  my_window.hpp
Shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  point_light_frag.spv  point_light_vert.spv  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv  simple_frag.spv  simple_vert.spv
apps/snake_ai/: app.hpp  model.cpp
apps/sorting_algorithms/: sorting_algorithms.cpp  sorting_algorithms.hpp
apps/template_app/: app.cpp  app.hpp
models/: model.mtl
src/: agent.cpp  fc1.pt  fc2.pt  fc3.pt  fc4.pt  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.hpp  my_buffer.cpp  my_buffer.hpp  my_camera.cpp  my_camera.hpp  my_descriptors.cpp  my_descriptors.hpp  my_device.cpp  my_device.hpp  my_frame_info.hpp  my_game_object.hpp  my_model.cpp  my_model.hpp  my_pipeline.cpp  my_pipeline.hpp  my_renderer.cpp  my_renderer.hpp  my_swap_chain.cpp  my_swap_chain.hpp  my_utils.hpp  my_window.cpp  my_window.hpp  template_app.cpp.txt  try.cpp  try.hpp
src/snake_ai/: agent.hpp  app.cpp  try.cpp
src/sorting_algorithms/: app.cpp  app.hpp  sorting_algorithms.cpp  sorting_algorithms.hpp
src/systems/: directional_light_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_renderer_system.cpp  simple_renderer_system.hpp
systems/: directional_light_system.hpp  point_light_system.cpp  simple_renderer_system.cpp  simple_renderer_system.hpp
